# name: ClickhouseTestTrends.test_insight_trends_aggregate
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT count(*) as data
  FROM
    (SELECT e.timestamp as timestamp
     FROM events e
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
       AND timestamp <= toDateTime('2012-01-15 23:59:59', 'UTC') ) events
  '
---
# name: ClickhouseTestTrends.test_insight_trends_aggregate.1
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_actions_people_?$ (ActionViewSet) */
  SELECT person_id AS actor_id
  FROM
    (SELECT e.timestamp as timestamp,
            pdi.person_id as person_id,
            e.distinct_id as distinct_id,
            e.team_id as team_id
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     INNER JOIN
       (SELECT id
        FROM person
        WHERE team_id = 2
        GROUP BY id
        HAVING max(is_deleted) = 0) person ON person.id = pdi.person_id
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
       AND timestamp <= toDateTime('2012-01-15 23:59:59', 'UTC') )
  GROUP BY actor_id
  LIMIT 200
  OFFSET 0
  '
---
# name: ClickhouseTestTrends.test_insight_trends_basic
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2012-01-15 23:59:59') - toIntervalDay(number), 'UTC') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC'), toDateTime('2012-01-15 23:59:59'), 'UTC'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
        UNION ALL SELECT count(DISTINCT person_id) as data,
                         toStartOfDay(toDateTime(timestamp), 'UTC') as date
        FROM
          (SELECT e.timestamp as timestamp,
                  pdi.person_id as person_id
           FROM events e
           INNER JOIN
             (SELECT distinct_id,
                     argMax(person_id, version) as person_id
              FROM person_distinct_id2
              WHERE team_id = 2
              GROUP BY distinct_id
              HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
           WHERE team_id = 2
             AND event = '$pageview'
             AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
             AND timestamp <= toDateTime('2012-01-15 23:59:59', 'UTC') )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: ClickhouseTestTrends.test_insight_trends_basic.1
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_actions_people_?$ (ActionViewSet) */
  SELECT person_id AS actor_id
  FROM
    (SELECT e.timestamp as timestamp,
            pdi.person_id as person_id,
            e.distinct_id as distinct_id,
            e.team_id as team_id
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     INNER JOIN
       (SELECT id
        FROM person
        WHERE team_id = 2
        GROUP BY id
        HAVING max(is_deleted) = 0) person ON person.id = pdi.person_id
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toDateTime('2012-01-14 00:00:00', 'UTC')
       AND timestamp <= toDateTime('2012-01-14 23:59:59', 'UTC') )
  GROUP BY actor_id
  LIMIT 200
  OFFSET 0
  '
---
# name: ClickhouseTestTrends.test_insight_trends_clean_arg
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2012-01-15 23:59:59') - toIntervalDay(number), 'UTC') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC'), toDateTime('2012-01-15 23:59:59'), 'UTC'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
        UNION ALL SELECT count(*) as data,
                         toStartOfDay(toDateTime(timestamp), 'UTC') as date
        FROM
          (SELECT e.timestamp as timestamp,
                  e.properties as properties
           FROM events e
           WHERE team_id = 2
             AND event = '$pageview'
             AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
             AND timestamp <= toDateTime('2012-01-15 23:59:59', 'UTC')
             AND (has(['val'], replaceRegexpAll(JSONExtractRaw(e.properties, 'key'), '^"|"$', ''))) )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: ClickhouseTestTrends.test_insight_trends_clean_arg.1
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_actions_people_?$ (ActionViewSet) */
  SELECT person_id AS actor_id
  FROM
    (SELECT e.timestamp as timestamp,
            e.properties as properties,
            pdi.person_id as person_id,
            e.distinct_id as distinct_id,
            e.team_id as team_id
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     INNER JOIN
       (SELECT id
        FROM person
        WHERE team_id = 2
        GROUP BY id
        HAVING max(is_deleted) = 0) person ON person.id = pdi.person_id
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toDateTime('2012-01-14 00:00:00', 'UTC')
       AND timestamp <= toDateTime('2012-01-14 23:59:59', 'UTC')
       AND (has(['val'], replaceRegexpAll(JSONExtractRaw(e.properties, 'key'), '^"|"$', ''))) )
  GROUP BY actor_id
  LIMIT 200
  OFFSET 0
  '
---
# name: ClickhouseTestTrends.test_insight_trends_cumulative
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2012-01-15 23:59:59') - toIntervalDay(number), 'UTC') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC'), toDateTime('2012-01-15 23:59:59'), 'UTC'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
        UNION ALL SELECT count(*) as data,
                         toStartOfDay(toDateTime(timestamp), 'UTC') as date
        FROM
          (SELECT e.timestamp as timestamp
           FROM events e
           WHERE team_id = 2
             AND event = '$pageview'
             AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
             AND timestamp <= toDateTime('2012-01-15 23:59:59', 'UTC') )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: ClickhouseTestTrends.test_insight_trends_cumulative.1
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_actions_people_?$ (ActionViewSet) */
  SELECT person_id AS actor_id
  FROM
    (SELECT e.timestamp as timestamp,
            pdi.person_id as person_id,
            e.distinct_id as distinct_id,
            e.team_id as team_id
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     INNER JOIN
       (SELECT id
        FROM person
        WHERE team_id = 2
        GROUP BY id
        HAVING max(is_deleted) = 0) person ON person.id = pdi.person_id
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
       AND timestamp <= toDateTime('2012-01-14 23:59:59', 'UTC') )
  GROUP BY actor_id
  LIMIT 200
  OFFSET 0
  '
---
# name: ClickhouseTestTrends.test_insight_trends_cumulative.2
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2012-01-15 23:59:59') - toIntervalDay(number), 'UTC') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC'), toDateTime('2012-01-15 23:59:59'), 'UTC'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
        UNION ALL SELECT count(DISTINCT person_id) as data,
                         toStartOfDay(toDateTime(timestamp), 'UTC') as date
        FROM
          (SELECT person_id,
                  min(timestamp) as timestamp
           FROM
             (SELECT e.timestamp as timestamp,
                     pdi.person_id as person_id
              FROM events e
              INNER JOIN
                (SELECT distinct_id,
                        argMax(person_id, version) as person_id
                 FROM person_distinct_id2
                 WHERE team_id = 2
                 GROUP BY distinct_id
                 HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
              WHERE team_id = 2
                AND event = '$pageview'
                AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
                AND timestamp <= toDateTime('2012-01-15 23:59:59', 'UTC') )
           GROUP BY person_id)
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: ClickhouseTestTrends.test_insight_trends_cumulative.3
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_actions_people_?$ (ActionViewSet) */
  SELECT person_id AS actor_id
  FROM
    (SELECT e.timestamp as timestamp,
            pdi.person_id as person_id,
            e.distinct_id as distinct_id,
            e.team_id as team_id
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     INNER JOIN
       (SELECT id
        FROM person
        WHERE team_id = 2
        GROUP BY id
        HAVING max(is_deleted) = 0) person ON person.id = pdi.person_id
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
       AND timestamp <= toDateTime('2012-01-14 23:59:59', 'UTC') )
  GROUP BY actor_id
  LIMIT 200
  OFFSET 0
  '
---
# name: ClickhouseTestTrends.test_insight_trends_cumulative.4
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(value)
  FROM
    (SELECT replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', '') AS value,
            count(*) as count
     FROM events e
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toDateTime('2012-01-01 00:00:00', 'UTC')
       AND timestamp <= toDateTime('2012-01-15 23:59:59', 'UTC')
     GROUP BY value
     ORDER BY count DESC
     LIMIT 25
     OFFSET 0)
  '
---
# name: ClickhouseTestTrends.test_insight_trends_cumulative.5
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(day_start) as date,
         groupArray(count) as data,
         breakdown_value
  FROM
    (SELECT SUM(total) as count,
            day_start,
            breakdown_value
     FROM
       (SELECT *
        FROM
          (SELECT toUInt16(0) AS total,
                  ticks.day_start as day_start,
                  breakdown_value
           FROM
             (SELECT toStartOfDay(toDateTime('2012-01-15 23:59:59', 'UTC') - number * 86400) as day_start
              FROM numbers(15)
              UNION ALL SELECT toStartOfDay(toDateTime('2012-01-01 00:00:00', 'UTC')) as day_start) as ticks
           CROSS JOIN
             (SELECT breakdown_value
              FROM
                (SELECT ['val', 'notval'] as breakdown_value) ARRAY
              JOIN breakdown_value) as sec
           ORDER BY breakdown_value,
                    day_start
           UNION ALL SELECT count(*) as total,
                            toStartOfDay(timestamp, 'UTC') as day_start,
                            replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', '') as breakdown_value
           FROM events e
           WHERE e.team_id = 2
             AND event = '$pageview'
             AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
             AND timestamp <= toDateTime('2012-01-15 23:59:59', 'UTC')
             AND replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', '') in (['val', 'notval'])
           GROUP BY day_start,
                    breakdown_value))
     GROUP BY day_start,
              breakdown_value
     ORDER BY breakdown_value,
              day_start)
  GROUP BY breakdown_value
  ORDER BY breakdown_value
  '
---
# name: ClickhouseTestTrends.test_insight_trends_cumulative.6
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_actions_people_?$ (ActionViewSet) */
  SELECT person_id AS actor_id
  FROM
    (SELECT e.timestamp as timestamp,
            e.properties as properties,
            pdi.person_id as person_id,
            e.distinct_id as distinct_id,
            e.team_id as team_id
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     INNER JOIN
       (SELECT id
        FROM person
        WHERE team_id = 2
        GROUP BY id
        HAVING max(is_deleted) = 0) person ON person.id = pdi.person_id
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
       AND timestamp <= toDateTime('2012-01-14 23:59:59', 'UTC')
       AND (has(['val'], replaceRegexpAll(JSONExtractRaw(e.properties, 'key'), '^"|"$', ''))) )
  GROUP BY actor_id
  LIMIT 200
  OFFSET 0
  '
---
# name: ClickhouseTestTrends.test_insight_trends_cumulative.7
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(value)
  FROM
    (SELECT replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', '') AS value,
            count(*) as count
     FROM events e
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toDateTime('2012-01-01 00:00:00', 'UTC')
       AND timestamp <= toDateTime('2012-01-15 23:59:59', 'UTC')
     GROUP BY value
     ORDER BY count DESC
     LIMIT 25
     OFFSET 0)
  '
---
# name: ClickhouseTestTrends.test_insight_trends_cumulative.8
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(day_start) as date,
         groupArray(count) as data,
         breakdown_value
  FROM
    (SELECT SUM(total) as count,
            day_start,
            breakdown_value
     FROM
       (SELECT *
        FROM
          (SELECT toUInt16(0) AS total,
                  ticks.day_start as day_start,
                  breakdown_value
           FROM
             (SELECT toStartOfDay(toDateTime('2012-01-15 23:59:59', 'UTC') - number * 86400) as day_start
              FROM numbers(15)
              UNION ALL SELECT toStartOfDay(toDateTime('2012-01-01 00:00:00', 'UTC')) as day_start) as ticks
           CROSS JOIN
             (SELECT breakdown_value
              FROM
                (SELECT ['val', 'notval'] as breakdown_value) ARRAY
              JOIN breakdown_value) as sec
           ORDER BY breakdown_value,
                    day_start
           UNION ALL SELECT count(DISTINCT pdi.person_id) as total,
                            toStartOfDay(timestamp, 'UTC') as day_start,
                            breakdown_value
           FROM
             (SELECT person_id,
                     min(timestamp) as timestamp,
                     breakdown_value
              FROM
                (SELECT pdi.person_id as person_id,
                        timestamp,
                        replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', '') as breakdown_value
                 FROM events e
                 INNER JOIN
                   (SELECT distinct_id,
                           argMax(person_id, version) as person_id
                    FROM person_distinct_id2
                    WHERE team_id = 2
                    GROUP BY distinct_id
                    HAVING argMax(is_deleted, version) = 0) as pdi ON events.distinct_id = pdi.distinct_id
                 WHERE e.team_id = 2
                   AND event = '$pageview'
                   AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
                   AND timestamp <= toDateTime('2012-01-15 23:59:59', 'UTC')
                   AND replaceRegexpAll(JSONExtractRaw(properties, 'key'), '^"|"$', '') in (['val', 'notval']) )
              GROUP BY person_id,
                       breakdown_value) AS pdi
           GROUP BY day_start,
                    breakdown_value))
     GROUP BY day_start,
              breakdown_value
     ORDER BY breakdown_value,
              day_start)
  GROUP BY breakdown_value
  ORDER BY breakdown_value
  '
---
# name: ClickhouseTestTrends.test_insight_trends_cumulative.9
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_actions_people_?$ (ActionViewSet) */
  SELECT person_id AS actor_id
  FROM
    (SELECT e.timestamp as timestamp,
            e.properties as properties,
            pdi.person_id as person_id,
            e.distinct_id as distinct_id,
            e.team_id as team_id
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     INNER JOIN
       (SELECT id
        FROM person
        WHERE team_id = 2
        GROUP BY id
        HAVING max(is_deleted) = 0) person ON person.id = pdi.person_id
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toStartOfDay(toDateTime('2012-01-01 00:00:00'), 'UTC')
       AND timestamp <= toDateTime('2012-01-14 23:59:59', 'UTC')
       AND (has(['val'], replaceRegexpAll(JSONExtractRaw(e.properties, 'key'), '^"|"$', ''))) )
  GROUP BY actor_id
  LIMIT 200
  OFFSET 0
  '
---
# name: ClickhouseTestTrendsGroups.test_aggregating_by_group
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_insights_trend_?$ (ClickhouseInsightsViewSet) */
  SELECT groupArray(day_start) as date,
         groupArray(count) as data
  FROM
    (SELECT SUM(total) AS count,
            day_start
     from
       (SELECT toUInt16(0) AS total,
               toStartOfDay(toDateTime('2020-01-12 23:59:59') - toIntervalDay(number), 'UTC') AS day_start
        FROM numbers(dateDiff('day', toStartOfDay(toDateTime('2020-01-01 00:00:00'), 'UTC'), toDateTime('2020-01-12 23:59:59'), 'UTC'))
        UNION ALL SELECT toUInt16(0) AS total,
                         toStartOfDay(toDateTime('2020-01-01 00:00:00'), 'UTC')
        UNION ALL SELECT count(DISTINCT $group_0) as data,
                         toStartOfDay(toDateTime(timestamp), 'UTC') as date
        FROM
          (SELECT e.timestamp as timestamp,
                  e.$group_0 as $group_0
           FROM events e
           WHERE team_id = 2
             AND event = '$pageview'
             AND timestamp >= toStartOfDay(toDateTime('2020-01-01 00:00:00'), 'UTC')
             AND timestamp <= toDateTime('2020-01-12 23:59:59', 'UTC')
             AND (NOT has([''], "$group_0")) )
        GROUP BY date)
     group by day_start
     order by day_start SETTINGS allow_experimental_window_functions = 1) SETTINGS timeout_before_checking_execution_speed = 60
  '
---
# name: ClickhouseTestTrendsGroups.test_aggregating_by_group.1
  '
  /* request:api_projects_(?P<parent_lookup_team_id>[^_.]+)_actions_people_?$ (ActionViewSet) */
  SELECT $group_0 AS actor_id
  FROM
    (SELECT e.timestamp as timestamp,
            e.$group_0 as $group_0
     FROM events e
     WHERE team_id = 2
       AND event = '$pageview'
       AND timestamp >= toDateTime('2020-01-02 00:00:00', 'UTC')
       AND timestamp <= toDateTime('2020-01-02 23:59:59', 'UTC')
       AND (NOT has([''], "$group_0")
            AND NOT has([''], "$group_0")) )
  GROUP BY actor_id
  LIMIT 200
  OFFSET 0
  '
---
